--- a/puniMembers.html
+++ b/puniMembers.html
@@ -253,7 +253,7 @@
 <body>
   <div class="top">
     <div class="top_left">
-        <div class="logo">
+        <div class="https://github.com/156ryo/membership/blob/main/img2/logo.png?raw=true">
             <img src="./img2/logo.png" width="200px">
         </div>
     </div>
