--- a/puniMembers.html
+++ b/puniMembers.html
@@ -278,14 +278,14 @@
 	<div class="scroll-infinity">
         <div class="scroll-infinity__wrap">
           <ul class="scroll-infinity__list scroll-infinity__list--left">
-            <li class="scroll-infinity__item"><img src="./img2/基板.jpg" /></li>                        
-            <li class="scroll-infinity__item"><img src="./img2/背景.jpg" /></li>
-            <li class="scroll-infinity__item"><img src="./img2/サムネ　.png" /></li>
+            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/circuit.jpg?raw=true" /></li>                        
+            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/haikei.jpg?raw=true" /></li>
+            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/samne.png?raw=true" /></li>
           </ul>
           <ul class="scroll-infinity__list scroll-infinity__list--left">
-            <li class="scroll-infinity__item"><img src="./img2/基板.jpg" /></li>                        
-            <li class="scroll-infinity__item"><img src="./img2/背景.jpg" /></li>
-            <li class="scroll-infinity__item"><img src="./img2/サムネ　.png" /></li>
+            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/circuit.jpg?raw=true" /></li>                        
+            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/haikei.jpg?raw=true" /></li>
+            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/samne.png?raw=true" /></li>
           </ul>
 
         </div>
