--- a/tokuten.html
+++ b/tokuten.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>メンバーシップの特典</title>
     <style>
         /* 余白とパディングをリセット */
         html, body {
@@ -303,9 +303,9 @@
       
       
           <div class="top_right">
-              <a href="#home"><button class="button">ホームへ戻る</button></a>
-              <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップの加入方法</button></a>
-              <a href="#contact"><button class="button">メンバーシップ加入</button></a>
+              <a href="https://156ryo.github.io/membership/puniMembers.html"><button class="button">ホームへ戻る</button></a>
+              <a href="https://156ryo.github.io/membership/howtomember.html"><button class="button">メンバーシップの加入方法</button></a>
+              <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ加入</button></a>
           </div>
     </div>
     <div class="topimg">
