--- a/puniMembers.html
+++ b/puniMembers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PuniMemberds</title>
+    <title>りょうにぃのメンバーシップサイト</title>
     <style>
         /* 余白とパディングをリセット */
         html, body {
@@ -269,8 +269,8 @@
 
 
     <div class="top_right">
-        <a href="#home"><button class="button">メンバーシップの加入方法</button></a>
-        <a href=""><button class="button">メンバーシップ特典</button></a>
+        <a href="https://156ryo.github.io/membership/howtomember.html"><button class="button">メンバーシップの加入方法</button></a>
+        <a href="https://156ryo.github.io/membership/tokuten.html"><button class="button">メンバーシップ特典</button></a>
         <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ加入</button></a>
     </div>
 </div>
@@ -278,7 +278,7 @@
 	<div class="scroll-infinity">
         <div class="scroll-infinity__wrap">
           <ul class="scroll-infinity__list scroll-infinity__list--left">
-            <li class="scroll-infinity__item"><img url="https://github.com/156ryo/membership/blob/main/img2/circuit.jpg?raw=true" /></li>                        
+            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/circuit.jpg?raw=true" /></li>                        
             <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/haikei.jpg?raw=true" /></li>
             <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/samne.png?raw=true" /></li>
           </ul>
