--- a/howtomember.html
+++ b/howtomember.html
@@ -326,9 +326,9 @@
     
     
         <div class="top_right">
-            <a href="#home"><button class="button">ホームへ戻る</button></a>
-            <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ特典</button></a>
-            <a href="#contact"><button class="button">メンバーシップ加入</button></a>
+            <a href="https://156ryo.github.io/membership/puniMembers.html"><button class="button">ホームへ戻る</button></a>
+            <a href="https://156ryo.github.io/membership/tokuten.html"><button class="button">メンバーシップ特典</button></a>
+            <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ加入</button></a>
         </div>
   </div>
     </div>
