--- a/puniMembers.html
+++ b/puniMembers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>りょうにぃのメンバーシップサイト</title>
+    <title>PuniMemberds</title>
     <style>
         /* 余白とパディングをリセット */
         html, body {
@@ -188,11 +188,23 @@
 /* スマホ用のスタイル */
 @media screen and (max-width: 768px) {
 
+  .title_member{
+    font-size: 20px;
+  }
+
+  .title_member_2{
+    font-size: 20px;
+  }
+
+  .newtext{
+    font-size: 14px;
+  }
+
   .tableA th{/*thに対して*/
           color: #ffffff;/*文字色*/
           background: #04177d;/*背景色*/
-          padding-left: 15px;
-          padding-right: 15px;
+          padding-left: 10px;
+          padding-right: 10px;
           font-size: 13px;
         }
 
@@ -253,7 +265,7 @@
 <body>
   <div class="top">
     <div class="top_left">
-        <div class="https://github.com/156ryo/membership/blob/main/img2/logo.png?raw=true">
+        <div class="logo">
             <img src="./img2/logo.png" width="200px">
         </div>
     </div>
@@ -269,8 +281,8 @@
 
 
     <div class="top_right">
-        <a href="https://156ryo.github.io/membership/howtomember.html"><button class="button">メンバーシップの加入方法</button></a>
-        <a href="https://156ryo.github.io/membership/tokuten.html"><button class="button">メンバーシップ特典</button></a>
+        <a href="#home"><button class="button">メンバーシップの加入方法</button></a>
+        <a href=""><button class="button">メンバーシップ特典</button></a>
         <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ加入</button></a>
     </div>
 </div>
@@ -278,14 +290,14 @@
 	<div class="scroll-infinity">
         <div class="scroll-infinity__wrap">
           <ul class="scroll-infinity__list scroll-infinity__list--left">
-            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/circuit.jpg?raw=true" /></li>                        
-            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/haikei.jpg?raw=true" /></li>
-            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/samne.png?raw=true" /></li>
+            <li class="scroll-infinity__item"><img src="./img2/基板.jpg" /></li>                        
+            <li class="scroll-infinity__item"><img src="./img2/背景.jpg" /></li>
+            <li class="scroll-infinity__item"><img src="./img2/サムネ　.png" /></li>
           </ul>
           <ul class="scroll-infinity__list scroll-infinity__list--left">
-            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/circuit.jpg?raw=true" /></li>                        
-            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/haikei.jpg?raw=true" /></li>
-            <li class="scroll-infinity__item"><img src="https://github.com/156ryo/membership/blob/main/img2/samne.png?raw=true" /></li>
+            <li class="scroll-infinity__item"><img src="./img2/基板.jpg" /></li>                        
+            <li class="scroll-infinity__item"><img src="./img2/背景.jpg" /></li>
+            <li class="scroll-infinity__item"><img src="./img2/サムネ　.png" /></li>
           </ul>
 
         </div>
