--- a/puniMembers.html
+++ b/puniMembers.html
@@ -205,7 +205,7 @@
           background: #04177d;/*背景色*/
           padding-left: 10px;
           padding-right: 10px;
-          font-size: 13px;
+          font-size: 10px;
         }
 
   .button {
@@ -290,14 +290,14 @@
 	<div class="scroll-infinity">
         <div class="scroll-infinity__wrap">
           <ul class="scroll-infinity__list scroll-infinity__list--left">
-            <li class="scroll-infinity__item"><img src="./img2/基板.jpg" /></li>                        
-            <li class="scroll-infinity__item"><img src="./img2/背景.jpg" /></li>
-            <li class="scroll-infinity__item"><img src="./img2/サムネ　.png" /></li>
+            <li class="scroll-infinity__item"><img src="./img2/haikei.jpg" /></li>                        
+            <li class="scroll-infinity__item"><img src="./img2/circuit.jpg" /></li>
+            <li class="scroll-infinity__item"><img src="./img2/samne.png" /></li>
           </ul>
           <ul class="scroll-infinity__list scroll-infinity__list--left">
-            <li class="scroll-infinity__item"><img src="./img2/基板.jpg" /></li>                        
-            <li class="scroll-infinity__item"><img src="./img2/背景.jpg" /></li>
-            <li class="scroll-infinity__item"><img src="./img2/サムネ　.png" /></li>
+            <li class="scroll-infinity__item"><img src="./img2/haikei.jpg" /></li>                        
+            <li class="scroll-infinity__item"><img src="./img2/circuit.jpg" /></li>
+            <li class="scroll-infinity__item"><img src="./img2/samne.png" /></li>
           </ul>
 
         </div>
