--- a/puniMembers.html
+++ b/puniMembers.html
@@ -281,8 +281,8 @@
 
 
     <div class="top_right">
-        <a href="#home"><button class="button">メンバーシップの加入方法</button></a>
-        <a href=""><button class="button">メンバーシップ特典</button></a>
+        <a href="https://156ryo.github.io/membership/howtomember.html"><button class="button">メンバーシップの加入方法</button></a>
+        <a href="https://156ryo.github.io/membership/tokuten.html"><button class="button">メンバーシップ特典</button></a>
         <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ加入</button></a>
     </div>
 </div>
