--- a/puniMembers.html
+++ b/puniMembers.html
@@ -316,16 +316,16 @@
             <th>Youtubeアカウント名</th><th>ぷにぷにユーザー名</th><th>有効月or無効月</th>
           </tr>
           <tr>
-            <td>あおねこ</td><td></td><td>有効</td>
+            <td>あおねこ</td><td>作成中</td><td>有効</td>
           </tr>
           <tr>
-            <td>SAME</td><td></td><td>有効</td>
+            <td>SAME</td><td>作成中</td><td>有効</td>
           </tr>
           <tr>
-            <td>はる</td><td></td><td>有効</td>
+            <td>はる</td><td>作成中</td><td>有効</td>
           </tr>
           <tr>
-            <td>井上曲希</td><td></td><td>有効</td>
+            <td>井上曲希</td><td>作成中</td><td>有効</td>
           </tr>
           <tr>
             <td>やんこ</td><td>なし</td><td>有効</td>
