--- a/tokuten.html
+++ b/tokuten.html
@@ -7,6 +7,7 @@
     <style>
         /* 余白とパディングをリセット */
         html, body {
+            font-family: sans-serif ;
             margin: 0;
             padding: 0;
             background-color: rgb(255, 255, 255);
