--- a/howtomember.html
+++ b/howtomember.html
@@ -7,7 +7,7 @@
     <style>
         /* 余白とパディングをリセット */
         html, body {
-            font-family: sans-serif ;
+          font-family: sans-serif ;
             margin: 0;
             padding: 0;
             background-color: rgb(255, 255, 255);
@@ -328,7 +328,7 @@
     
         <div class="top_right">
             <a href="https://156ryo.github.io/membership/puniMembers.html"><button class="button">ホームへ戻る</button></a>
-            <a href="https://156ryo.github.io/membership/tokuten.html"><button class="button">メンバーシップ特典</button></a>
+            <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ特典</button></a>
             <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ加入</button></a>
         </div>
   </div>
