--- a/puniMembers.html
+++ b/puniMembers.html
@@ -189,6 +189,40 @@
 /* スマホ用のスタイル */
 @media screen and (max-width: 768px) {
 
+  .punimembers{
+          margin: 0;
+          font-size: 16px;
+          font-weight: bold;
+          margin-left: 20px;
+          margin-top: 10px;
+          margin-bottom: 5px;
+        }
+
+  .title_member {
+          margin: 0;
+          margin-left: 15px;
+          border-left: 10px solid red;
+            font-size: 16px;
+            padding-left: 14px;
+            font-weight: bold;
+        }
+
+        .title_member_2{
+          margin: 0;
+          margin-left: 15px;
+          border-left: 10px solid red;
+            font-size: 17px;
+            padding-left: 14px;
+            font-weight: bold;
+            margin-top: 15px;
+        }
+
+  table td {
+          border: solid 1px black;
+          font-size: 14px;
+          /*実線 1px 黒*/
+        }
+
   .title_member{
     font-size: 20px;
   }
