--- a/howtomember.html
+++ b/howtomember.html
@@ -248,6 +248,22 @@
 /* スマホ用のスタイル */
 @media screen and (max-width: 768px) {
 
+  .topA{
+    font-size: 18px;
+  }
+
+  .topA_body{
+    font-size: 13px;
+  }
+
+  .howtotitie1{
+    font-size: 17px;
+  }
+
+  .howtotitie2{
+    font-size: 17px;
+  }
+
   .tableA th{/*thに対して*/
           color: #ffffff;/*文字色*/
           background: #04177d;/*背景色*/
@@ -303,6 +319,14 @@
         font-size: 16px; 
         font-weight: bold;
         color: rgb(0, 0, 0); /* テキストカラーを指定 */
+    }
+
+    .howto1{
+      font-size: 14px;
+    }
+
+    .howto2{
+      font-size: 14px;
     }
 }
 
