--- a/tokuten.html
+++ b/tokuten.html
@@ -233,6 +233,12 @@
           font-size: 13px;
         }
 
+        table td {
+          border: solid 1px black;
+          font-size: 14px;
+          /*実線 1px 黒*/
+        }
+
   .button {
             padding: 8px 8px;
             background-color: rgba(0,0,0,0.1);
@@ -281,6 +287,34 @@
         font-weight: bold;
         color: rgb(0, 0, 0); /* テキストカラーを指定 */
     }
+
+.topA{
+    font-size: 18px;
+}
+
+.topA_body{
+    font-size: 12px;
+}
+
+.howto1{
+    font-size: 14px;
+}
+
+.howto2{
+    font-size: 14px;
+}
+
+.howtotitie1{
+    font-size: 16px;
+}
+
+.howtotitie2{
+    font-size: 16px;
+}
+
+.instagram{
+    font-size: 12px;
+}
 }
 
     </style>
