--- a/howtomember.html
+++ b/howtomember.html
@@ -352,7 +352,7 @@
     
         <div class="top_right">
             <a href="https://156ryo.github.io/membership/puniMembers.html"><button class="button">ホームへ戻る</button></a>
-            <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ特典</button></a>
+            <a href="https://156ryo.github.io/membership/tokuten.html"><button class="button">メンバーシップ特典</button></a>
             <a href="https://www.youtube.com/channel/UCZW2ohmOGZQq2f02lxKcyjA/join"><button class="button">メンバーシップ加入</button></a>
         </div>
   </div>
