--- a/puniMembers.html
+++ b/puniMembers.html
@@ -397,7 +397,10 @@
       <p class="title_member_2">           
         新着情報
       </p>
-      <p class="newtext">2024.9.15 ぷにメンバーズ会員サイトを開設！</p>
+      <div class="newtext">
+        2024.9.15 20:36 文字のフォントやサイズを見やすくしました。<br>
+        2024.9.15 16:00 ぷにメンバーズ会員サイトを開設！
+      </div>
     </div>
     <br><br><br>
     <div class="foot">
