--- a/puniMembers.html
+++ b/puniMembers.html
@@ -351,13 +351,7 @@
             <th>Youtubeアカウント名</th><th>ぷにぷにユーザー名</th><th>有効月or無効月</th>
           </tr>
           <tr>
-            <td>あおねこ</td><td></td><td>有効</td>
-          </tr>
-          <tr>
             <td>SAME</td><td></td><td>有効</td>
-          </tr>
-          <tr>
-            <td>はる</td><td></td><td>有効</td>
           </tr>
           <tr>
             <td>井上曲希</td><td></td><td>有効</td>
@@ -398,6 +392,7 @@
         新着情報
       </p>
       <div class="newtext">
+        2024.9.19 12:00 メンバーの一覧表を更新しました。
         2024.9.15 20:36 文字のフォントやサイズを見やすくしました。<br>
         2024.9.15 16:00 ぷにメンバーズ会員サイトを開設！
       </div>
