--- a/puniMembers.html
+++ b/puniMembers.html
@@ -392,7 +392,7 @@
         新着情報
       </p>
       <div class="newtext">
-        2024.9.19 12:00 メンバーの一覧表を更新しました。
+        2024.9.19 12:00 メンバーの一覧表を更新しました。<br>
         2024.9.15 20:36 文字のフォントやサイズを見やすくしました。<br>
         2024.9.15 16:00 ぷにメンバーズ会員サイトを開設！
       </div>
