--- a/puniMembers.html
+++ b/puniMembers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>りょうにぃのメンバーシップサイト</title>
+    <link rel="icon" href="img2/画像1 (1).ico">
     <style>
         /* 余白とパディングをリセット */
         html, body {
@@ -392,7 +393,7 @@
         新着情報
       </p>
       <div class="newtext">
-        2024.9.19 12:00 メンバーの一覧表を更新しました。<br>
+        2024.9.19 12:00 メンバーの一覧表を更新しました。
         2024.9.15 20:36 文字のフォントやサイズを見やすくしました。<br>
         2024.9.15 16:00 ぷにメンバーズ会員サイトを開設！
       </div>
