--- a/tokuten.html
+++ b/tokuten.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>メンバーシップの特典</title>
+    <link rel="icon" href="img2/icon.ico">
     <style>
         /* 余白とパディングをリセット */
         html, body {
