--- a/howtomember.html
+++ b/howtomember.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>メンバーシップの加入方法</title>
-    <link rel="icon" href="img2/icon.ico">
+    <link rel="icon" href="img2/icon2.ico">
     <style>
         /* 余白とパディングをリセット */
         html, body {
